--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris egestas sapien eleifend purus cursus semper. Nulla nec elementum orci. Etiam ac hendrerit augue. In gravida nisi tristique, ultrices tellus in, vehicula diam. Donec et sapien aliquam, malesuada erat ut, tempor risus. Donec mattis nulla ac elit sollicitudin, sit amet euismod mauris ultrices. Nullam vitae eros et sem congue placerat. Morbi malesuada commodo nunc, rhoncus consectetur ante. Integer a lacus nulla. Donec ullamcorper nec nulla sed porttitor. Morbi malesuada risus nec dolor mollis blandit. Aliquam id orci eget orci viverra convallis ac ac lorem. Ut aliquam libero sit amet posuere aliquet. Praesent convallis odio sed sapien lacinia luctus quis vitae leo.
                     </p>
+                    <a class="coinbase-button" data-code="d0eca610eb2111a0bc8450396be9e496" data-button-style="custom_large" href="https://coinbase.com/checkouts/d0eca610eb2111a0bc8450396be9e496">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
                     <!-- AddThis Button BEGIN -->
 <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 <a class="addthis_button_preferred_1"></a>
